# Pong-game

./: Makefile  README  README.md  compatibility.txt  config.h  main.c  main.cpp  pong.iso  rework.c  setup.py  wii_term.sh
Pong/: build.sh  main.cpp  out  setup.py
RayLib/Lightweigh/: .info.txt  Makefile  Pong  Pong.out  WebLiPong.c  howtorun.md  info.txt  lightweigh-pong.c  mkhttp.sh
RayLib/Spins/CSharp/: How2Run.md  Program.cs
RayLib/Spins/FreeBasic/: HOWTORUN.txt  main.bas
RayLib/Spins/Java/: Ball.java  Main.java  build.gradle  settings.gradle
RayLib/Spins/Python/: how_to_run.txt  main.py  run_me.sh
RayLib/Spins/Zig/: How2Run.txt
RayLib/Spins/Zig/.zig-cache/o/6551c65f42554bea696c32fbd26f963f/: dependencies.zig
RayLib/Spins/Zig/src/: .main.zig.swp  main.zig
RayLib/Standard/: CMakeLists.txt  Makefile.bak  Pong.desktop  config.h  install.sh  main.c  pong-game.tar.gz.tar.xz  readme.txt
RayLib/Standard/pkg/: Pong  Pong.desktop  README.txt  install.sh
SDL1/: README.txt  compatibility.txt
SDL1/Proj/: LEGAL  MANUAL  Makefile  Pong  TODO  main.c
SDL1/Proj/sdl-win95/lib/: libSDLmain.la
Spins/: CatMe.md
Spins/CSharp/: PongGame.csproj
Spins/Cpp/: How2Run.md  Makefile  info.md
Spins/Java/: How2Run.md  PaddleAI.java  PaddlePlayer.java  Settings.java
Spins/Python/: main.py
Spins/Zig/: How2Run.txt  build.zig  build.zig.zon
Spins/Zig/src/: .main.zig.swp
i386/: Makefile  info.txt
sdl-win95/include/SDL/: SDL_config.h
sdl-win95/lib/: libSDL.la
sdl-win95/lib/pkgconfig/: sdl.pc
x86_64/: main.c
